// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/create-note-button on desktop should create note on button click 1`] = `
<lego-components_button
  classname="create-note-button create-note-button_desktop"
  type="link"
  view="clear"
  width="max"
>
  Новая заметка
</lego-components_button>
`;

exports[`src/components/create-note-button on desktop should have tooltip and should not be clickable if max notes count reached 1`] = `
<ufo-rocks_hover-tooltip
  classname="create-note-button__hover-tooltip"
  clstext="create-note-button__hover-tooltip-text"
  showdelay="500"
  text="У вас много заметок — больше создать нельзя. Удалите какую-нибудь заметку, чтобы создать новую."
>
  <lego-components_button
    classname="create-note-button create-note-button_desktop"
    disabled="true"
    type="link"
    view="clear"
    width="max"
  >
    Новая заметка
  </lego-components_button>
</ufo-rocks_hover-tooltip>
`;

exports[`src/components/create-note-button on touch devices should add special class modificator if the app is opened in mobile yandex-browser on android device 1`] = `
<lego-components_button
  classname="create-note-button create-note-button_touch create-note-button_left-side"
  type="link"
  view="clear"
/>
`;

exports[`src/components/create-note-button on touch devices should create note when the button is clicked on touch devices 1`] = `
<lego-components_button
  classname="create-note-button create-note-button_touch"
  type="link"
  view="clear"
/>
`;

exports[`src/components/create-note-button on touch devices should notify about \`too many notes\` if the button is clicked by a user with maximum number of notes on touch devices 1`] = `
<lego-components_button
  classname="create-note-button create-note-button_touch"
  type="link"
  view="clear"
/>
`;
